[package]
name = "mvdup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
sha256 = "1.1"
rusqlite = { version = "0.29", features = ["bundled-sqlcipher"] }
glob = "0.3"
thiserror = "1.0"
anyhow = "1.0"
rpassword = "7.2"
sha2 = "0.10"
hex = "0.4"